@@ -1,0 +1,10 @@
+package com.R3DKn16h7.kerncraft.items.molecules;
+
+//public class AlloyBlock extends Block {
+
+//    public AlloyBlock(String name, Object oreNames) {
+
+
+//    }
+
+//}
