@@ -58,7 +58,6 @@
       "thermalConductivity": 200,
         "color": "steel gray",
         "characteristics": "toxic",
-        "uses": "Cu alloys, X-ray windows",
         "toxic": "TRUE",
       "state": "s"
     },
@@ -67,12 +66,12 @@
         "group": "13",
         "period": "2",
         "family": "Semimetal",
-        "mass": "10.81",
-        "density": "2.34",
-        "radius": "1.17",
-        "conductivity": "1E-12",
-      "specificHeat": "1.02",
-      "thermalConductivity": "27",
+      "mass": 10.81,
+      "density": 2.34,
+      "radius": 1.17,
+      "conductivity": 1E-12,
+      "specificHeat": 1.02,
+      "thermalConductivity": 27,
         "Notes": "sublimes",
         "source": "Na and Ca borates (misc)",
         "color": "black",
