@@ -1,3 +1,13 @@
+
+2017-05-05  F. <>
+    * Boron day and
+    * Alloys
+    * Cleaned up multi tool
+
+2017-05-04  F. <>
+    * Beryllium day
+    * Multi-tool
+
 2017-05-04  F. <>
     * ADD: more fluids for machines
     * Better support for fluids in machines
